--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.defer-datasource-initialization=true
 logging.level.org.springframework.web = TRACE
+spring.application.name=spring-training
 wavefront.application.name=spring-training
 wavefront.application.service=spring-rest-services
 wavefront.freemium-account=true
