--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,18 @@
 				<groupId>org.asciidoctor</groupId>
 				<artifactId>asciidoctor-maven-plugin</artifactId>
 				<version>1.5.8</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.asciidoctor</groupId>
+						<artifactId>asciidoctorj-diagram</artifactId>
+						<version>1.5.8</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<requires>
+						<require>asciidoctor-diagram</require>
+					</requires>
+				</configuration>
 				<executions>
 					<execution>
 						<id>generate-docs</id>
