--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,3 +24,7 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+      - name: Create Site Documentation
+        run: mkdir documentation && cp target/generated-docs/*.* documentation
+      - name: Documentation directory Listing
+        run: ls -l documentation
