--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,3 +28,10 @@ jobs:
         run: mkdir documentation && cp target/generated-docs/*.* documentation
       - name: Documentation directory Listing
         run: ls -l documentation
+      - name: Publish documentation
+          uses: netlify/actions/cli@master
+          with:
+            args: deploy --dir=documentation
+          env:
+            NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+            NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
