--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,6 +22,8 @@ jobs:
           java-version: '8'
           distribution: 'temurin'
           cache: maven
+      - name: graphviz
+        run: sudo apt install graphviz
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       - name: Create Site Documentation
@@ -31,7 +33,7 @@ jobs:
       - name: Publish documentation
         uses: netlify/actions/cli@master
         with:
-          args: deploy --dir=documentation
+          args: deploy --dir=documentation --prod
         env:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
