--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       - name: Create Site Documentation
-        run: mkdir documentation && cp -R target/generated-docs documentation
+        run: mkdir documentation && cp -RT target/generated-docs documentation
       - name: Documentation directory Listing
         run: ls -l documentation
       - name: Publish documentation
