--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,9 +27,9 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       - name: Create Site Documentation
-        run: mkdir documentation && cp -RT target/generated-docs documentation
-      - name: Documentation directory Listing
-        run: ls -l documentation
+        run: |
+          mkdir documentation && cp -RT target/generated-docs documentation
+          ls -l documentation
       - name: Publish documentation
         uses: netlify/actions/cli@master
         with:
