--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,11 +26,16 @@ jobs:
         run: sudo apt install graphviz
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+      - name: Publish to Docker
+        run: >
+          mvn -B spring-boot:build-image -Dspring-boot.build-image.publish=true
+              -Ddocker.user=${{ secrets.DOCKER_USER }} -Ddocker.password=${{ secrets.DOCKER_TOKEN }}
+              -Ddocker.url=https://hub.docker.com --file pom.xml
       - name: Create Site Documentation
         run: |
           mkdir documentation && cp -RT target/generated-docs documentation
           ls -l documentation
-      - name: Publish documentation
+      - name: Publish documentation to Netlify
         uses: netlify/actions/cli@master
         with:
           args: deploy --dir=documentation --prod
