--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,11 +26,6 @@ jobs:
         run: sudo apt install graphviz
       - name: Build with Maven
         run: mvn -B package --file pom.xml
-      - name: Publish to Docker
-        run: >
-          mvn -B spring-boot:build-image -Dspring-boot.build-image.publish=true
-              -Ddocker.user=${{ secrets.DOCKER_USER }} -Ddocker.password=${{ secrets.DOCKER_TOKEN }}
-              -Ddocker.url=https://hub.docker.com --file pom.xml
       - name: Create Site Documentation
         run: |
           mkdir documentation && cp -RT target/generated-docs documentation
@@ -42,3 +37,8 @@ jobs:
         env:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+      - name: Publish to Docker
+        run: >
+            mvn -B spring-boot:build-image -Dspring-boot.build-image.publish=true
+                -Ddocker.user=${{ secrets.DOCKER_USER }} -Ddocker.token=${{ secrets.DOCKER_TOKEN }}
+                -Ddocker.url=https://hub.docker.com -DskipTests --file pom.xml
