--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<docker.user>user</docker.user>
-		<docker.password>token</docker.password>
+		<docker.token>token</docker.token>
 		<docker.url>url</docker.url>
 	</properties>
 	<dependencyManagement>
@@ -104,7 +104,7 @@
 					<docker>
 						<publishRegistry>
 							<username>${docker.user}</username>
-							<password>${docker.password}</password>
+							<password>${docker.token}</password>
 							<url>${docker.url}</url>
 						</publishRegistry>
 					</docker>
