--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,6 @@
 		<java.version>1.8</java.version>
 		<docker.user>user</docker.user>
 		<docker.token>token</docker.token>
-		<docker.url>https://hub.docker.com</docker.url>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -105,7 +104,7 @@
 						<publishRegistry>
 							<username>${docker.user}</username>
 							<password>${docker.token}</password>
-							<url>${docker.url}</url>
+							<url>https://index.docker.io/v1</url>
 						</publishRegistry>
 					</docker>
 				</configuration>
