--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
 	<description>Rest Services for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
-		<docker.user>user</docker.user>
-		<docker.token>token</docker.token>
+		<docker.user/>
+		<docker.token/>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -44,6 +44,16 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
