--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
         name: spring-training
     mvc:
       throw-exception-if-no-handler-found: true
+    cloud:
+      kubernetes:
+        enabled: false
     datasource:
         driverClassName: org.h2.Driver
         password: password
