--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,6 +31,11 @@ management:
         env:
             enabled: true
 
+    metrics:
+      export:
+        wavefront:
+          enabled: false
+
 wavefront:
     application:
         name: spring-training
