--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
         name: spring-training
     mvc:
       throw-exception-if-no-handler-found: true
+    datasource:
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        jpa:
+            database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     liquibase:
         change-log: classpath:/db/changelog/changelog-master.xml
 
