--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,3 +3,5 @@ spring:
         password: passer
         url: jdbc:mysql://localhost:3306/example?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
         username: root
+        jpa:
+            database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
