--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,11 +2,16 @@ server:
     port: 9090
     servlet:
       context-path: /v1
+
 spring:
     application:
         name: spring-training
     liquibase:
         change-log: classpath:/db/changelog/changelog-master.xml
+
+springdoc:
+    api-docs:
+        path: /api-docs
 
 management:
     endpoints:
