--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,7 @@ info:
     application:
         name: spring-training
         version: '@project.version@'
+
+wavefront:
+    application:
+        name: spring-training
