--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,3 +5,9 @@ spring:
         username: root
         jpa:
             database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    security:
+        oauth2:
+            resourceserver:
+                jwt:
+                    issuer-uri: http://localhost:8083/auth/realms/example
+                    jwk-set-uri: http://localhost:8083/auth/realms/example/protocol/openid-connect/certs
