--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
-    cloud:
-      kubernetes:
-        enabled: false
     liquibase:
       change-log: classpath:/db/changelog/changelog-master.xml
+    security:
+      oauth2:
+        resourceserver:
+          jwt:
+            public-key-location: classpath:idp-key.pub
