--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.spring.training</groupId>
-    <artifactId>rest-services</artifactId>
+    <artifactId>spring-rest</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Spring Rest Services</name>
     <description>Rest Services for Spring Boot</description>
     <properties>
-        <java.version>8</java.version>
+        <java.version>1.8</java.version>
         <docker.user/>
         <docker.token/>
     </properties>
@@ -133,7 +133,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -147,7 +146,7 @@
                         </exclude>
                     </excludes>
                     <image>
-                        <name>laminba2003/spring-rest:${project.version}</name>
+                        <name>laminba2003/${project.artifactId}:${project.version}</name>
                     </image>
                     <docker>
                         <publishRegistry>
@@ -194,37 +193,34 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>2.7</version>
                 <configuration>
                     <delimiters>
                         <delimiter>@</delimiter>
                     </delimiters>
                     <useDefaultDelimiters>false</useDefaultDelimiters>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
                         <id>copy-stubs</id>
                         <phase>prepare-package</phase>
                         <goals>
-                            <goal>copy-resources</goal>
+                            <goal>run</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${basedir}/target/stubs/contracts/${project.groupId}/${project.artifactId}</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>${basedir}/target/snippets/countries/stubs</directory>
-                                    <includes>
-                                        <include>**/*.json</include>
-                                    </includes>
-                                </resource>
-                                <resource>
-                                    <directory>${basedir}/target/snippets/persons/stubs</directory>
-                                    <includes>
-                                        <include>**/*.json</include>
-                                    </includes>
-                                </resource>
-                            </resources>
+                            <target>
+                                <copy todir="${basedir}/target/stubs/contracts/${project.groupId}/${project.artifactId}" flatten="true">
+                                    <fileset dir="${basedir}/target/snippets">
+                                        <include name="**/*.json"/>
+                                    </fileset>
+                                </copy>
+                            </target>
                         </configuration>
                     </execution>
                 </executions>
@@ -232,7 +228,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.2.2</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -248,5 +243,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
