--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,14 @@ management:
         env:
             enabled: true
 
+    endpoint:
+      health:
+        show-details: ALWAYS
+
+    health:
+        redis:
+          enabled: false
+
 info:
     application:
         name: spring-training
