--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,8 @@ management:
     health:
         redis:
           enabled: false
+        probes:
+            enabled: true
 
 info:
     application:
