--- a/charts/spring-rest/Chart.yaml
+++ b/charts/spring-rest/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: deployment
+name: spring-rest
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
