--- a/charts/spring-rest/templates/deployment.yaml
+++ b/charts/spring-rest/templates/deployment.yaml
@@ -51,9 +51,9 @@ spec:
             periodSeconds: 15
           envFrom:
             - configMapRef:
-                name: spring-training
+                name: "{{ .Release.Name }}-configmap"
             - secretRef:
-                name: spring-training
+                name: "{{ .Release.Name }}-secret"
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
