--- a/charts/spring-rest/templates/deployment.yaml
+++ b/charts/spring-rest/templates/deployment.yaml
@@ -41,19 +41,22 @@ spec:
             httpGet:
               path: /v1/actuator/health/liveness
               port: 9090
-            initialDelaySeconds: 600
+            initialDelaySeconds: 120
             periodSeconds: 15
           readinessProbe:
             httpGet:
               path: /v1/actuator/health/readiness
               port: 9090
-            initialDelaySeconds: 600
+            initialDelaySeconds: 120
             periodSeconds: 15
+          env:
+            - name: JAVA_TOOL_OPTIONS
+              value: -Xms256M -Xmx256M -Xss256K -XX:ReservedCodeCacheSize=64M
           envFrom:
             - configMapRef:
-                name: "{{ .Release.Name }}-configmap"
+                name: {{ .Release.Name }}
             - secretRef:
-                name: "{{ .Release.Name }}-secret"
+                name: {{ .Release.Name }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
