--- a/charts/spring-rest/templates/secret.yaml
+++ b/charts/spring-rest/templates/secret.yaml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name:  {{ .Release.Name }}-secret
+  name:  {{ include "deployment.fullname" . }}
 data:
   management.metrics.export.wavefront.api-token: {{ .Values.api.configuration.wavefront.token }}
   spring.datasource.username: {{ .Values.api.configuration.datasource.username }}
   spring.datasource.password: {{ .Values.api.configuration.datasource.password }}
+  spring.redis.password: {{ .Values.api.configuration.redis.password }}
 type: Opaque
