--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release Charts
 on:
   workflow_run:
     workflows: ["build"]
-    branches: [master, release]
+    branches: [release]
     types:
       - completed
 
